🔧 fix: keywords 메타 태그 수정

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="프론트엔드 개발자 노현수의 포트폴리오입니다." />
     <meta
       name="keywords"
-      content="프론트엔드, 개발자, 웹개발, UI/UX, 반응형웹, 포트폴리오, HTML, CSS, TailwindCSS, SASS, JavaScript, TypeScript, React, Git, GitHub, 노현수"
+      content="프론트엔드, 개발자, 웹개발, UI/UX, 반응형웹, 포트폴리오, HTML, CSS, TailwindCSS, JavaScript, TypeScript, React, Next.js, Node.js, MongoDB, Supabase, Git, GitHub, Figma, 노현수"
     />
     <meta name="author" content="노현수" />
     <meta name="robots" content="index,follow" />
