--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="theme-color" content="#0e1623" />
 
+    <!-- Font preload -->
+    <link rel="preload" href="/fonts/PretendardVariable.woff2" as="font" type="font/woff2" crossorigin />
+    
     <!-- Apple Touch Icon -->
     <link
       rel="apple-touch-icon"
