🔧 fix: 이미지 반응형 처리 기존으로 롤백 및 폰트 파일 위치 변경

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="theme-color" content="#0e1623" />
 
     <!-- Font preload -->
-    <link rel="preload" href="/fonts/PretendardVariable.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="./src/assets/fonts/PretendardVariable.woff2" as="font" type="font/woff2" crossorigin />
     
     <!-- Apple Touch Icon -->
     <link
