--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
     <!-- Font preload -->
     <link rel="preload" href="./src/assets/fonts/PretendardVariable.woff2" as="font" type="font/woff2" crossorigin />
+
+    <!-- Preconnect to external origins -->
+    <link rel="preconnect" href="https://slfshwrgohbhdlsasywo.supabase.co" crossorigin />
+    <link rel="dns-prefetch" href="https://slfshwrgohbhdlsasywo.supabase.co" />
     
     <!-- Apple Touch Icon -->
     <link
