🔧 fix: toosign.dev로 도메인 변경으로 인한 각종 url 수정

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- 검색엔진 최적화 -->
     <meta name="google-site-verification" content="41chZlV6pPStxcnZ523kFirsd3uA0hSWf-rsFl6Bx48" />
     <meta name="naver-site-verification" content="516c1584b8a3a6ed2b645854119afdac37f4aeb1" />
-    <link rel="canonical" href="https://toosign.kr" />
+    <link rel="canonical" href="https://toosign.dev" />
 
     <!-- 타이틀 -->
     <title>노현수 | 프론트엔드 개발자</title>
@@ -58,8 +58,8 @@
     <!-- Open Graph 메타 태그 (소셜 미디어 공유용) -->
     <meta property="og:title" content="노현수 | 프론트엔드 포트폴리오" />
     <meta property="og:description" content="프론트엔드 개발자 노현수의 포트폴리오입니다." />
-    <meta property="og:image" content="https://toosign.kr/assets/images/meta-thumbnail.webp" />
-    <meta property="og:url" content="https://toosign.kr" />
+    <meta property="og:image" content="https://toosign.dev/assets/images/meta-thumbnail.webp" />
+    <meta property="og:url" content="https://toosign.dev" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="노현수 | 프론트엔드 포트폴리오" />
     <meta property="og:locale" content="ko_KR" />
@@ -70,7 +70,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="노현수 | 프론트엔드 포트폴리오" />
     <meta name="twitter:description" content="프론트엔드 개발자 노현수의 포트폴리오입니다." />
-    <meta name="twitter:image" content="https://toosign.kr/assets/images/meta-thumbnail.webp" />
+    <meta name="twitter:image" content="https://toosign.dev/assets/images/meta-thumbnail.webp" />
 
     <!-- Schema.org -->
     <script type="application/ld+json">
@@ -79,10 +79,10 @@
         "@type": "Person",
         "name": "노현수",
         "jobTitle": "Front-End Developer",
-        "url": "https://toosign.kr",
+        "url": "https://toosign.dev",
         "email": "kevinsoo1014@gmail.com",
         "telephone": "+82 10-8514-8477",
-        "image": "https://toosign.kr/profile.webp",
+        "image": "https://toosign.dev/profile.webp",
         "sameAs": [
           "https://github.com/toosign00/",
           "https://www.linkedin.com/in/hyunsoo-ro-97871431b/"
