--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
     <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon.svg" />
 
     <!-- Open Graph 메타 태그 (소셜 미디어 공유용) -->
-    <meta property="og:title" content="노현수 | 프론트엔드 포트폴리오" />
+    <meta property="og:title" content="노현수 | 프론트엔드 개발자" />
     <meta property="og:description" content="프론트엔드 개발자 노현수의 포트폴리오입니다." />
     <meta property="og:image" content="https://toosign.dev/assets/images/meta-thumbnail.webp" />
     <meta property="og:url" content="https://toosign.dev" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="노현수 | 프론트엔드 포트폴리오" />
+    <meta property="og:site_name" content="노현수 | 프론트엔드 개발자" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image:width" content="1300" />
     <meta property="og:image:height" content="680" />
 
     <!-- Twitter 카드 메타 태그 -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="노현수 | 프론트엔드 포트폴리오" />
+    <meta name="twitter:title" content="노현수 | 프론트엔드 개발자" />
     <meta name="twitter:description" content="프론트엔드 개발자 노현수의 포트폴리오입니다." />
     <meta name="twitter:image" content="https://toosign.dev/assets/images/meta-thumbnail.webp" />
 
