--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="theme-color" content="#0e1623" />
 
-    <!-- Font preload -->
-    <link rel="preload" href="./src/assets/fonts/PretendardVariable.woff2" as="font" type="font/woff2" crossorigin />
-
     <!-- Preconnect to external origins -->
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
     <link rel="preconnect" href="https://slfshwrgohbhdlsasywo.supabase.co" crossorigin />
+    <link rel="dns-prefetch" href="https://cdn.jsdelivr.net" />
     <link rel="dns-prefetch" href="https://slfshwrgohbhdlsasywo.supabase.co" />
     
     <!-- Apple Touch Icon -->
@@ -110,7 +109,7 @@
       }
     </script>
   </head>
-  <body class="font-pretendard bg-black">
+  <body class="font-pretendard-jp bg-black">
     <noscript>
       <div
         class="fixed inset-0 z-[9999] flex h-full w-full flex-col items-center justify-center bg-black p-5 text-center text-white"
