🔧 fix: 로컬 폰트 방식으로 롤백 및 JP 폰트로 변경

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="theme-color" content="#0e1623" />
 
     <!-- Font preload -->
-    <link rel="preload" href="./src/assets/fonts/PretendardVariable.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="./src/assets/fonts/PretendardJPVariable.woff2" as="font" type="font/woff2" crossorigin />
 
     <!-- Preconnect to external origins -->
     <link rel="preconnect" href="https://slfshwrgohbhdlsasywo.supabase.co" crossorigin />
@@ -110,7 +110,7 @@
       }
     </script>
   </head>
-  <body class="font-pretendard bg-black">
+  <body class="font-pretendard-jp bg-black">
     <noscript>
       <div
         class="fixed inset-0 z-[9999] flex h-full w-full flex-col items-center justify-center bg-black p-5 text-center text-white"
