--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="theme-color" content="#0e1623" />
 
-    <!-- Font preload -->
-    <link rel="preload" href="./src/assets/fonts/PretendardJPVariable.woff2" as="font" type="font/woff2" crossorigin />
-
     <!-- Preconnect to external origins -->
     <link rel="preconnect" href="https://slfshwrgohbhdlsasywo.supabase.co" crossorigin />
     <link rel="dns-prefetch" href="https://slfshwrgohbhdlsasywo.supabase.co" />
+    <link rel="preconnect" href="https://www.googletagmanager.com" />
+    <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
     
     <!-- Apple Touch Icon -->
     <link
